// Copyright 2022 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "github.com/ServiceWeaver/weaver-gke/internal/local/proxy";

package proxy;

// RouteRequest stores the mapping from hostname to the backends for that
// hostname.
message RouteRequest {
  map<string, HostBackends> host_backends = 1;
  string clump = 2;
}

// HostBackends stores a list of backends for a given hostname.
message HostBackends {
  repeated Backend backends = 1;
}

// Backend stores information about a backend.
message Backend {
  string address = 1;  // address of a backend
  float weight = 2;    // traffic fraction for the backend
}
